; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_ws2801.c_enable_pin_mux.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_ws2801.c_enable_pin_mux.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PERIPHS_IO_MUX_GPIO0_U = common dso_local global i32 0, align 4
@FUNC_GPIO0 = common dso_local global i32 0, align 4
@PERIPHS_IO_MUX_GPIO2_U = common dso_local global i32 0, align 4
@FUNC_GPIO2 = common dso_local global i32 0, align 4
@PERIPHS_IO_MUX_GPIO4_U = common dso_local global i32 0, align 4
@FUNC_GPIO4 = common dso_local global i32 0, align 4
@PERIPHS_IO_MUX_GPIO5_U = common dso_local global i32 0, align 4
@FUNC_GPIO5 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @enable_pin_mux to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enable_pin_mux(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  switch i32 %3, label %20 [
    i32 0, label %4
    i32 2, label %8
    i32 4, label %12
    i32 5, label %16
  ]

4:                                                ; preds = %1
  %5 = load i32, i32* @PERIPHS_IO_MUX_GPIO0_U, align 4
  %6 = load i32, i32* @FUNC_GPIO0, align 4
  %7 = call i32 @PIN_FUNC_SELECT(i32 %5, i32 %6)
  br label %21

8:                                                ; preds = %1
  %9 = load i32, i32* @PERIPHS_IO_MUX_GPIO2_U, align 4
  %10 = load i32, i32* @FUNC_GPIO2, align 4
  %11 = call i32 @PIN_FUNC_SELECT(i32 %9, i32 %10)
  br label %21

12:                                               ; preds = %1
  %13 = load i32, i32* @PERIPHS_IO_MUX_GPIO4_U, align 4
  %14 = load i32, i32* @FUNC_GPIO4, align 4
  %15 = call i32 @PIN_FUNC_SELECT(i32 %13, i32 %14)
  br label %21

16:                                               ; preds = %1
  %17 = load i32, i32* @PERIPHS_IO_MUX_GPIO5_U, align 4
  %18 = load i32, i32* @FUNC_GPIO5, align 4
  %19 = call i32 @PIN_FUNC_SELECT(i32 %17, i32 %18)
  br label %21

20:                                               ; preds = %1
  br label %21

21:                                               ; preds = %20, %16, %12, %8, %4
  ret void
}

declare dso_local i32 @PIN_FUNC_SELECT(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
